[package]
name = "samp-query-rs"
version = "0.1.0"
authors = ["Carlos Menezes <carlos-menezes212@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
byteorder = "1.4.3"